@@ -125,16 +125,20 @@ namespace Rcpp {
             SEXP proxy_sexp = proxy ;
             if( proxy_sexp == NA_STRING ) { data = NA_STRING ; valid = true; buffer_ready = false ; return *this ;}
             setBuffer() ; buffer += CHAR(proxy_sexp) ; valid = false ;
-            RCPP_STRING_DEBUG_1( "String::operator+=( const StringProxy& ), buffer = %s", buffer.c_str() ) ;
             return *this ;
         }  
-        
+        inline String& operator+=( SEXP x){ 
+            RCPP_STRING_DEBUG( "String::operator+=( SEXP )" ) ;
+            if( is_na() ) return *this ;
+            if( x == NA_STRING ) { data = NA_STRING ; valid = true; buffer_ready = false ; return *this ;}
+            setBuffer() ; buffer += CHAR(x) ; valid = false ;
+            return *this ;
+        }
         // inline String& operator+=( int x     ){ data += char_nocheck(internal::r_coerce<INTSXP ,STRSXP>( x ) ) ; return *this ; }
         // inline String& operator+=( double x  ){ data += char_nocheck(internal::r_coerce<REALSXP,STRSXP>( x ) ) ; return *this ; }
         // inline String& operator+=( Rbyte x   ){ data += char_nocheck(internal::r_coerce<RAWSXP ,STRSXP>( x ) ) ; return *this ; }
         // inline String& operator+=( bool x    ){ data += char_nocheck(internal::r_coerce<LGLSXP ,STRSXP>( x ) ) ; return *this ; }
         // inline String& operator+=( Rcomplex x){ data += char_nocheck(internal::r_coerce<CPLXSXP,STRSXP>( x ) ) ; return *this ; }
-        // inline String& operator+=( SEXP x){ data += CHAR(x) ; return *this ; }                              
         
         
         inline String& replace_first( const char* s, const char* news ){
