@@ -22,6 +22,7 @@
         \item More efficient version of \code{in} base on \code{IndexHash}
         \item More efficient version of \code{duplicated} base on \code{IndexHash}
         \item More efficient version of \code{self_match} base on \code{IndexHash}
+        \item New function \code{collapse} that implements paste(., collapse= "" )
     }
     \item Changes in Rcpp attributes: 
         \itemize{
