@@ -1,6 +1,9 @@
 2012-12-11 Romain Francois <romain@r-enthusiasts.com>
 
-        * include/String.h: missing operator +=( const StringProxy& )
+        * include/Rcpp/String.h: missing operator +=( const StringProxy& )
+        * include/Rcpp/sugar/functions/strings/strings.h : string sugar functions
+        * include/Rcpp/sugar/functions/strings/collapse.h : collapse function, 
+        implementing paste( . , collapse = "" )
 
 2012-12-10  JJ Allaire <jj@rstudio.org>
 
